[package]
name = "libpower"
version = "0.1.0"
edition = "2018"
description = "A Rust library containing algorithms commonly used in power electronics systems, targeted for use in embedded systems"
authors = ["Shishir Dey <r0qck3ntp@mozmail.com>"]
license = "MIT"
repository = "https://github.com/shishir-dey/libpower"
homepage = "https://shishir-dey.github.io/libpower/"
documentation = "https://shishir-dey.github.io/libpower/"
readme = "README.md"
keywords = ["library", "microcontroller", "firmware", "electronics", "embedded-systems"]
categories = ["embedded", "hardware-support", "science", "simulation"]

[dependencies]
