[package]
name = "libpower"
version = "0.2.0"
edition = "2024"
description = "A Rust library containing algorithms commonly used in power electronics systems, targeted for use in embedded systems"
authors = ["Shishir Dey <r0qck3ntp@mozmail.com>"]
license = "MIT"
repository = "https://github.com/shishir-dey/libpower"
homepage = "https://shishir-dey.github.io/libpower/"
documentation = "https://shishir-dey.github.io/libpower/"
readme = "README.md"
keywords = ["power-electronics", "control-systems", "dsp", "embedded-systems", "mppt"]
categories = ["embedded", "hardware-support", "science", "algorithms", "no-std"]

[dependencies]
libm = "0.2"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
toml = { version = "0.9", default-features = false, features = ["parse", "serde"] }
